# imxrt-rs

./: Cargo.toml
imxrt-hal/: Cargo.toml
t4-examples/: Cargo.toml  README.md
t4-examples/src/: rtic.rs
